--- a/package.json
+++ b/package.json
@@ -7,15 +7,21 @@
     "start": "nodemon src/index.js "
   },
   "dependencies": {
-    "bcryptjs": "^3.0.3",
+    "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
+    "geoip-lite": "^1.4.10",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.20.0",
     "nodemailer": "^7.0.10",
     "nodemon": "^3.1.11",
+    "ratelimiter": "^3.4.1",
+    "useragent": "^2.3.0",
     "uuid": "^8.3.2"
   }
 }
